# metabocommand

./: .gitignore  Cargo.toml  README.md
crates/metabocommand-kernel/tests/: velocity_pipeline.rs
docs/: GOVERNANCE_WATCHDOG.md  OPEN_SOURCE_RESEARCH.md
src/app/(dashboard)/agent-log/: agent-log-view.tsx
src/app/(dashboard)/approvals/: approval-queue.tsx
src/app/(dashboard)/operations/: support-reflex-agent-view.tsx
src/app/api/approvals/decide/: route.ts
src/app/api/approvals/evidence/: route.ts
src/app/api/approvals/submit/: route.ts
src/lib/: governance-watchdog.ts  support-orchestration.ts
src/lib/supabase/: types.ts
supabase/migrations/: 0004_governance_watchdog.sql
