[workspace]
resolver = "2"
members = ["crates/metabocommand-kernel"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MetaboCommand"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
